--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -20,7 +20,7 @@ To enable your BOSH deployment to be backed up and restored, the deployment must
 For your backup artifact to be restorable to another environment, you must meet the following conditions:
 
 * The BOSH topology of a deployment is the same in the restore environment as it was in the backup environment.
-* For any deployment that implements the backup and restore scripts, the instance groups and jobs have the same names. 
+* For any deployment that implements the backup and restore scripts, the instance groups and jobs must have the same names. 
 * For instance groups or jobs that have backup and restore scripts, they must have the same number of instances. 
 
 A change in VM size or underlying hardware should not affect BBR’s ability to restore data, 
@@ -56,7 +56,7 @@ Perform the following steps to check that your BOSH Director is reachable and ca
     Replace the placeholder values as follows:
     * `PATH_TO_PRIVATE_KEY`: This is the path to the SSH private key used to connect to the BOSH Director.
     * `USER_NAME`: This is the SSH username of the BOSH Director.
-    * `HOST`: This is the address of the BOSH Director, with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address. 
+    * `HOST`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address. 
 
 1. If the pre-backup check succeeds, continue to the [next section](#bbr-backup-director). If it fails, the command will print the reason why it cannot back up the deployment with the error code 1. The BOSH Director you selected may not have the correct backup scripts, or the connection to the BOSH Director may have failed.
 
@@ -75,9 +75,9 @@ Use the optional `--debug` flag to enable debug logs. See the [Exit Codes and Lo
 <br><br>
 Replace the placeholder values with the same values as above.
 
-If the commands completes successfully, do the following:
+If the command completes successfully, do the following:
 
-1. Move the backup artifact off the jumpbox to your preferred storage space. BBR stores each backup in the current working directory, in a directory named `HOST-TIMESTAMP`. The backup created by BBR consists of a folder with the backup artifacts and metadata files. 
+1. Move the backup artifact off the jumpbox to your preferred storage space. BBR stores each backup in a subdirectory named `HOST-TIMESTAMP` within the current working directory. The backup created by BBR consists of a folder with the backup artifacts and metadata files. 
 1. Compress and encrypt the backup artifacts when storing them.
 1. Make redundant copies of your backup and store them in multiple locations in order to minimize the risk of losing your backups in the event of a disaster.
 1. Attempt a test restore on every backup in order to validate it by performing the procedures in the [Restoring with BOSH Backup and Restore](restore.html) topic.
@@ -113,10 +113,10 @@ Perform the following steps to check that your BOSH Director is reachable and ha
     Use the optional `--debug` flag to enable debug logs. See the [Exit Codes and Logging](logging.html) topic for more information.
     <br><br>
     Replace the placeholder values as follows:
-    * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the user name and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your user name and password.
+    * `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
     * `BOSH_TARGET`: This is the FQDN or IP address of your BOSH Director.
     * `DEPLOYMENT-NAME`: This is the name of the deployment you want to back up. For a list of deployments, run `bosh deployments`.
-    * `PATH_TO_BOSH_SERVER_CERT`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate, if the certificate is not verifiable by the local machine’s certificate chain.  
+    * `PATH_TO_BOSH_SERVER_CERT`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain.  
 
 1. If the pre-backup check succeeds, continue to the [next section](#bbr-backup-deployment). If it fails, the command will print the reason why it cannot back up the deployment with the error code 1. The deployment you selected may not have the correct backup scripts, or the connection to the BOSH Director may have failed.
 
@@ -138,11 +138,11 @@ Use the optional `--with-manifest` to include the deployment manifest with the b
 <br><br>
 Replace the placeholder values with the same values as above.
 
-<p class="note"><strong>Note</strong>: The BBR backup command can take a long time to complete. You can run it independently of the SSH session, so that the process can continue running even if your connection to the jumpbox fails. The command above uses <code>nohup</code> but you could also run the command in a <code>screen</code> or <code>tmux</code> session.</p>
+<p class="note"><strong>Note</strong>: The BBR backup command can take a long time to complete. You can run it independently of the SSH session so that the process can continue running even if your connection to the jumpbox fails. The command above uses <code>nohup</code>, but you could also run the command in a <code>screen</code> or <code>tmux</code> session.</p>
 
 If the commands completes successfully, do the following:
 
-1. Move the backup artifact off the jumpbox to your preferred storage space. BBR stores each backup in the current working directory, in a directory named `DEPLOYMENT-TIMESTAMP`. The backup created by BBR consists of a folder with the backup artifacts and metadata files. 
+1. Move the backup artifact off the jumpbox to your preferred storage space. BBR stores each backup in a subdirectory named `DEPLOYMENT-TIMESTAMP` within the current working directory. The backup created by BBR consists of a folder with the backup artifacts and metadata files. 
 1. Compress and encrypt the backup artifacts when storing them.
 1. Make redundant copies of your backup and store them in multiple locations in order to minimize the risk of losing your backups in the event of a disaster.
 1. Attempt a test restore on every backup in order to validate it by performing the procedures in the [Restoring with BOSH Backup and Restore](restore.html) topic.
