--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -28,7 +28,7 @@ You can back up and restore the following BOSH deployments with BBR:
 <li>BOSH Director, including UAA and CredHub</li>
 </ul>
 
-BBR supports BOSH directors which use one of the following:
+BBR supports BOSH Directors which use one of the following:
 
 * Basic Auth
 * Client/Client-Secret UAA Authentication
@@ -45,12 +45,12 @@ This approach has the following advantages:
 <%= vars.bbr_pcf2 %>
 
 ### Backup Scripts
-1. **pre-backup-lock**: The pre-backup lock scripts locks the job so backups are consistent across the cluster.
+1. **pre-backup-lock**: The pre-backup lock script locks the job so backups are consistent across the cluster.
 1. **backup**: The backup script backs up the release.
 1. **post-backup-unlock**: The post-backup unlock script unlocks the job after the backup is complete.
 
 ### Restore Scripts
-1. **pre-restore-lock**: The pre-restore-lock scripts locks the job so the restore is consistent across the cluster. 
+1. **pre-restore-lock**: The pre-restore-lock script locks the job so the restore is consistent across the cluster. 
 1. **restore**: The restore script restores the release.
 1. **post-restore-unlock**: The post-restore-unlock script unlocks the job after the restore is complete. 
 
@@ -62,7 +62,7 @@ BBR examines the jobs in the BOSH deployment or BOSH Director, and triggers the 
 
 Scripts in the same stage are all triggered together. For instance, BBR triggers all pre-backup lock scripts before any backup scripts. Scripts within a stage may be triggered in any order.
 
-The backup artifacts are drained to the jumpbox, where the operator can transfer them to storage and use them to restore the BOSH deployment or BOSH Director.
+The backup artifacts are drained to the jumpbox where the operator can transfer them to storage and use them to restore the BOSH deployment or BOSH Director.
 
 The following diagram shows a sample backup flow.
 
@@ -105,7 +105,7 @@ The parameters are:
 * `--debug`: This is an optional flag to display debug output.
 * `--private-key-path`: This is the path to the SSH private key used to connect to the BOSH Director.
 * `--username`: This is the SSH username of the BOSH Director.
-* `--host`: This is the address of the BOSH Director, with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address. 
+* `--host`: This is the address of the BOSH Director with an optional port that defaults to 22. If the BOSH Director is public, this is a URL, such as `https://my-bosh.xxx.cf-app.com`. Otherwise, this is the BOSH Director IP address. 
 * `--artifact-path`: This is the path to the BOSH Director backup you want to restore.
 
 ### BOSH Deployment
@@ -126,10 +126,10 @@ $ BOSH_CLIENT_SECRET=BOSH_CLIENT_SECRET \
 The arguments are:
 
 * `--debug`: This is an optional flag to display debug output.
-* `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the user name and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your user name and password.
+* `BOSH_CLIENT`, `BOSH_CLIENT_SECRET`: If you have a BOSH Director with User Account and Authentication (UAA) as the authentication provider, use a UAA client as the username and a UAA client secret as the password. If you have a BOSH Director with basic auth configured, use your username and password.
 * `--target`: This is the FQDN or IP address of your BOSH Director.
 * `--deployment`: This is the name of the deployment you want to back up. For a list of deployments, run `bosh deployments`.
-* `--ca-cert`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate, if the certificate is not verifiable by the local machine’s certificate chain.
+* `--ca-cert`: This is the path to the BOSH Director’s Certificate Authority (CA) certificate if the certificate is not verifiable by the local machine’s certificate chain.
 * `--artifact-path`: This is the path to the BOSH deployment backup you want to restore.
 
 ### Subcommands
