Link to one source of truth (sdk repo readme)
[#165016476]

Signed-off-by: Glen Rodgers <grodgers@pivotal.io>

--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -122,17 +122,7 @@ BBR can communicate with external blobstores and databases over TLS if they are 
 ### <a id='supported-external-databases'></a>Supported External Databases
 
 Cloud Foundry components use the backup and restore SDK to interface with databases for backup and restore.
-The backup and restore SDK supports the following database versions:
-
-| Name     | Version |
-|:---------|:--------|
-| MariaDB  | 10.1.x  |
-| MySQL    | 5.5.x   |
-| MySQL    | 5.6.x   |
-| MySQL    | 5.7.x   |
-| Postgres | 9.4.x   |
-| Postgres | 9.6.x   |
-
+For supported databases and versions, please see [backup and restore SDK github repo](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release#database-backup-and-restore).
 
 ### <a id='supported-blobstore-backup-configurations'></a>Selective Backup and Restore Configurations for Blobstores
 
