--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -131,7 +131,7 @@ of the default internal blobstore. For more information about supported external
 blobstores, see [Backup and Restore for External Blobstores](external-blobstores.html).
 
 When BBR backs up and restores your Cloud Foundry blobstore, it includes droplets, buildpacks, and packages
-by default. If you configure an external blobstore, you can choose to omit content
+by default. For your blobstore, you can choose to omit content
 from your backup and restore using the following ops files:
 
 | Selective Backup Ops File                                                                                                                                                                                            | Content Included in Backup |
