--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -30,14 +30,14 @@ For more information about the jumpbox, see [Installing BOSH Backup and Restore]
 To connect to your jumpbox using the command line, run the following command:
 
 ```
-ssh -i PATH-TO-KEY USER@IP-ADDRESS
+ssh -i PATH-TO-KEY  JUMPBOX-USERNAME@JUMPBOX-ADDRESS
 ```
 
 Where:
 
   * `PATH-TO-KEY` is the local path to your private key file for the jumpbox host.
-  * `USER` is your jumpbox username.
-  * `IP-ADDRESS` is the IP address of your jumpbox.
+  * `JUMPBOX-USERNAME` is your jumpbox username.
+  * `JUMPBOX-ADDRESS` is the address of the jumpbox.
 
 <p class="note"><strong>Note</strong>: If you connect to your jumpbox with SSH,
    you must run the BBR commands in this topic from within your jumpbox.
@@ -72,7 +72,7 @@ To connect with `BOSH_ALL_PROXY`, do one of the following:
         Where:
 
       * `SOCKS-PORT` is the local SOCKS port.
-      * `JUMPBOX-USERNAME` is the username that you can use to SSH to the jumpbox.
+      * `JUMPBOX-USERNAME` is your jumpbox username.
       * `JUMPBOX-ADDRESS` is the address of the jumpbox.
       * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
   1. Provide the BOSH CLI with access to the tunnel using the `BOSH_ALL_PROXY`
@@ -93,7 +93,7 @@ To connect with `BOSH_ALL_PROXY`, do one of the following:
     ```
 
     Where:
-    * `JUMPBOX-USERNAME` is the username that you can use to SSH to the jumpbox.
+    * `JUMPBOX-USERNAME` is your jumpbox username.
     * `JUMPBOX-ADDRESS` is the address of the jumpbox.
     * `SOCKS-PORT` is the local SOCKS port.
     * `JUMPBOX-KEY-FILE` is the local SSH private key for accessing the jumpbox.
