--- a/cf-backup.html.md.erb
+++ b/cf-backup.html.md.erb
@@ -5,7 +5,7 @@ owner: BBR
 
 This topic describes the configuration you need for your Cloud Foundry (CF) deployment to work with BOSH Backup and Restore (BBR).
 
-This topic assumes that you are using
+This topic assumes that you use
 [cf-deployment](https://github.com/cloudfoundry/cf-deployment) with ops files
 for your Cloud Foundry deployment.
 
@@ -14,7 +14,7 @@ Cloud Foundry to use BBR. Examine the contents of the ops files on this page,
 and use them as a guide to customize your deployment manifest directly.
 
 <div class="note warning">
-  <strong>WARNING</strong>:
+  <strong>Warning:</strong>
   <ul>
     <li><strong>Backup artifacts can contain secrets.</strong> Secure backup artifacts with encryption or by other means.</li>
     <li><strong>The restore is a destructive operation.</strong> BBR is designed to restore CF after a disaster.
@@ -34,9 +34,11 @@ To enable backup and restore for your `cf-deployment`, deploy it with the
 [enable-backup-restore.yml](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore.yml) ops file. This
 enables BBR backup and restore for default CF components, including the internal blobstore.
 
-When using the default configuration, all applications return to a running state after a restore.
+When using the default configuration, all apps return to a running state after a restore.
 
-To enable BBR backup and restore for different configurations you must also use the appropriate backup and restore ops files. For information on the available backup and restore ops files, see [cf-deployment](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore).
+To enable BBR backup and restore for different configurations you must also use the appropriate backup and restore ops files.
+For information about the available backup and restore ops files, see the
+[cf-deployment README file](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/README.md) in GitHub.
 
 ### <a id='supported-external-databases'></a>Supported External Databases
 
@@ -61,19 +63,19 @@ using the following ops files:
 | <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/skip-backup-restore-droplets.yml">`skip-backup-restore-droplets.yml`</a>                           | Buildpacks, Packages |
 | <a href="https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/skip-backup-restore-droplets-and-packages.yml">`skip-backup-restore-droplets-and-packages.yml`</a> | Buildpacks           |
 
-<p class="note warning"><strong>WARNING</strong>: Selective backups increase
-your overall recovery time. When you use selective backup ops files, applications
+<p class="note warning"><strong>Warning:</strong> Selective backups increase
+your overall recovery time. When you use selective backup ops files, apps
 require extra steps to return to a running state after a restore. For more
 information, see the <a href="#selective-backup-restore-steps">Restoring Applications when Using Selective Backups</a> section below.<p>
 
 #### <a id='selective-backup-restore-steps'></a>Restoring Applications when Using Selective Backups
 
-When using the `skip-backup-restore-droplets.yml` ops file, do the following to get your applications running after a restore:
+When using the `skip-backup-restore-droplets.yml` ops file, do the following to get your apps running after a restore:
 
 1. For each user-pushed application, run `cf restage`.
 1. For each application pushed using a BOSH errand, you can either run `cf restage` or re-run the BOSH errand.
 
-When using the `skip-backup-restore-droplets-and-packages.yml` ops file, do the following to get your applications running after a restore:
+When using the `skip-backup-restore-droplets-and-packages.yml` ops file, do the following to get your apps running after a restore:
 
 1. For each user-pushed application, run `cf push`.
 1. For each application pushed using a BOSH errand, re-run the BOSH errand.
@@ -102,7 +104,7 @@ To configure `cf-deployment` to use an S3-compatible unversioned blobstore with 
 1. `enable-backup-restore-s3-unversioned.yml`
 1. `skip-backup-and-restore-droplets-and-packages.yml`
 
-<p class="note"><strong>Note</strong>: You can apply other component ops files before the backup and restore ops files. For example, you can apply other component ops file between <code>use-s3-blobstore.yml</code> and <code>enable-backup-restore.yml</code>.<p>
+<p class="note"><strong>Note:</strong> You can apply other component ops files before the backup and restore ops files. For example, you can apply other component ops file between <code>use-s3-blobstore.yml</code> and <code>enable-backup-restore.yml</code>.<p>
 
 ## <a id='process'></a> Next Steps
 
