--- a/external-blobstores.html.md.erb
+++ b/external-blobstores.html.md.erb
@@ -43,7 +43,7 @@ you must co-locate the `s3-unversioned-blobstore-backup-restorer` job from the [
      BBR automatically makes use of your configured trusted certificates.
     </p>
 
-1. Create backup buckets for droplets, packages, and buildpacks. Pivotal recommends that either the backup buckets or copies of them be in a different region than the live buckets.
+1. Create backup buckets for droplets, packages, and buildpacks. Cloud Foundry recommends that either the backup buckets or copies of them be in a different region than the live buckets.
 
 1. Include the `enable-backup-restore-s3-unversioned.yml` ops file in your deployment. The `enable-backup-restore-s3-unversioned.yml` file can be found in the [cf-deployment](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-s3-unversioned.yml) GitHub repository.
   <br><br>
@@ -57,7 +57,7 @@ you must co-locate the `s3-unversioned-blobstore-backup-restorer` job from the [
     See the contents of the `enable-backup-restore-s3-unversioned.yml` ops file as an example and review the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#s3-compatible-unversioned-blobstores) documentation in GitHub for further information.
 
 <p class="note warning">
-  <strong>Warning:</strong> To minimize storage costs, Pivotal recommends creating a lifecycle policy for your backup buckets that permanently expires your older backups. For more information, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/user-guide/create-lifecycle.html">the AWS documentation</a>.
+  <strong>Warning:</strong> To minimize storage costs, Cloud Foundry recommends creating a lifecycle policy for your backup buckets that permanently expires your older backups. For more information, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/user-guide/create-lifecycle.html">the AWS documentation</a>.
 </p>
 
 ### <a id="s3-unversioned-supported-restore-scenarios"></a> Supported Restore Scenarios for Your Unversioned S3-Compatible Blobstore
@@ -72,7 +72,9 @@ If your original backup buckets are lost but you are restoring from copies of th
 </p>
 
 ## <a id="s3-versioned"></a> S3-Compatible Versioned Blobstores
-BBR supports S3-compatible buckets that are versioned and support AWS Signature Version 4. For more details about enabling versioning on your blobstore, see [Enable Versioning on Your S3-Compatible Blobstore](#enable-s3-versioning).
+BBR supports S3-compatible buckets that are versioned and support AWS Signature Version 4.
+For more details about enabling versioning on your blobstore,
+see [Enable Versioning on Your S3-Compatible Blobstore](#enable-s3-versioning) below.
 
 External blobstores are backed up by storing the current version of each blob, not the actual files. Those versions are set to be the current versions at restore time.
 
@@ -140,7 +142,7 @@ If you prefer to use the [AWS CLI](https://aws.amazon.com/cli/), use the `put-bu
 3. After enabling versioning, you have a current version and zero or more non-current versions for each object.
 <div class="note warning">
   <strong>Warning:</strong>
-    Pivotal recommends setting an expiration policy on your buckets to delete old non-current versions and minimize storage costs. For more information, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/dev/lifecycle-configuration-examples.html#lifecycle-config-conceptual-ex6">the AWS documentation</a> in the Amazon Simple Storage Service documentation.
+    Cloud Foundry recommends setting an expiration policy on your buckets to delete old non-current versions and minimize storage costs. For more information, see <a href="https://docs.aws.amazon.com/AmazonS3/latest/dev/lifecycle-configuration-examples.html#lifecycle-config-conceptual-ex6">the AWS documentation</a> in the Amazon Simple Storage Service documentation.
 </div>
 </p>
 
@@ -315,7 +317,7 @@ backup buckets, without transferring the blobs to your BBR instance.
 To back up a Cloud Foundry deployment that uses an GCS external blobstore,
 you must co-locate the `gcs-blobstore-backup-restorer` job from the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/tree/master) as part of your deployment.
 
-1. Create backup buckets for droplets, packages, and buildpacks. Pivotal recommends that either the backup buckets or copies of them be in a different region than the live buckets.
+1. Create backup buckets for droplets, packages, and buildpacks. Cloud Foundry recommends that either the backup buckets or copies of them be in a different region than the live buckets.
 
 1. Include the `enable-backup-restore-gcs.yml` ops file in your deployment. The `enable-backup-restore-gcs.yml` file can be found in the [cf-deployment](https://github.com/cloudfoundry/cf-deployment/blob/master/operations/backup-and-restore/enable-backup-restore-gcs.yml) GitHub repository.
   <br><br>
@@ -330,7 +332,7 @@ you must co-locate the `gcs-blobstore-backup-restorer` job from the [backup-and-
   See the contents of the `enable-backup-restore-gcs.yml` ops file as an example and review the [backup-and-restore-sdk-release](https://github.com/cloudfoundry-incubator/backup-and-restore-sdk-release/blob/master/docs/blobstore-backup-restore.md#google-cloud-storage-blobstores) documentation in GitHub for further information.
 
 <p class="note warning">
-  <strong>Warning:</strong> To minimize storage costs, Pivotal recommends creating a lifecycle policy for your backup buckets that permanently expires your older backups. For more information, see <a href="https://cloud.google.com/storage/docs/lifecycle">the GCP documentation</a>.
+  <strong>Warning:</strong> To minimize storage costs, Cloud Foundry recommends creating a lifecycle policy for your backup buckets that permanently expires your older backups. For more information, see <a href="https://cloud.google.com/storage/docs/lifecycle">the GCP documentation</a>.
 </p>
 
 
