--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -47,6 +47,14 @@ This approach has the following advantages:
 1. **restore**: The restore script restores the release.
 1. **post-restore-unlock**: The post-restore-unlock script unlocks the job after the restore is complete.
 
+## <a id='recs'></a> Recommendations
+
+* Back up frequently, especially before upgrading any deployment.
+
+* For BOSH v270.0 and above, you can prune the BOSH blobstore by running `bosh clean-up --all` prior to running a backup of the BOSH director. This will remove all unused resources including packages compiled against older stemcell versions. This will result in a smaller, faster backup of the BOSH director if a lot of unused resources have accumulated over time. For more information see [Clean-Up](https://bosh.io/docs/cli-v2/#clean-up).
+
+<p class="note"><strong>Note:</strong>The command `bosh clean-up --all` is a destructive operation and can remove resources that are unused but needed. For example, if an On-Demand Service Broker is deployed <strong>and</strong> no service instances have been created, the releases needed to create a service instance will be categorised as unused and removed.</p>
+
 ## <a id='workflow'></a>What happens when you run a BBR backup?
 
 *Prerequisite:* The operator has [installed BBR](installing.html)
